# BoletimOcorrencias_T3

./: BoletimOcorrencia.db  BoletimOcorrencias.db  README.md  database.py  divisao_tarefas.txt  docker-compose.yml  main.py  pyproject.toml  teste.db
config/: database.py
core/: db.py
migrations/: env.py
migrations/versions/: 18d2726ebaad_usuarios_adicionais.py  314c21e167c2_fix_models.py  40c807a950ca_tabelas_criadas.py  a8b8520bb742_alter_tables.py  ad1509f2a00e_tabelas_criadas.py  d26b49f7f7af_tabelas_criadas.py
models/: BoletimOcorrencia.py  Declarante_Boletim.py  __init__.py  autor.py  boletim_ocorrencia.py  declarante.py  declarante_boletim.py
repository/: autor.py  boletim.py  declarante.py
rotas/: autor.py  boletim.py  declarante.py
routes/: autor.py  boletim.py  declarante.py
schemas/: autor.py  boletim.py  declarante.py
service/: autor.py  boletim.py  declarante.py
